# codecontext

./: .codecontext.toml  README.md  main.py  pyproject.toml
codecontext/: PRODUCT_API.md  ast_graph.py  ast_graph_test.py  benchmark.py  bm25.py  cli.py  config.py  context_pack.py  costing.py  db.py  embeddings.py  escalation_cost_test.py  executor.py  extractors.py  gateway.py  git_context.py  llm_client.py  llm_client_test.py  outbound_schema.py  output_visibility.py  patcher.py  product_api.py  product_api_test.py  ranking.py  redaction.py  response_handler.py  router.py  routing_authority_test.py  routing_consolidation_e2e_test.py  routing_contract.py  scanner.py  search.py  summaries.py  telemetry.py  usage_ledger.py  utils.py
codecontext/.openclaw/local_first/: local_first.db
codecontext/benchmarks/datasets/: explain_style.json  hard_explain16.json  irrelevant_control.json  organic_random16.json  phase_workflow.json  plugin_runtime_inspection.json  stress_escalation16.json  unit_test_dataset.json
codecontext/benchmarks/results/: hard_explain16_1773937578.json  messy_real16_1773937634.json  organic_random16_1773936107.json  plugin_runtime_inspection_1773930799.json  plugin_runtime_inspection_1773934496.json  stress_escalation16_1773937974.json  stress_escalation16_1773938012.json  unit_test_dataset_1773930737.json  unit_test_dataset_1773931982.json  unit_test_dataset_1773934093.json  unit_test_dataset_1776062660.json
codecontext/codecontext/: __init__.py  ast_graph.py  ast_graph_test.py  benchmark.py  benchmark_test.py  bm25.py  cli.py  config.py  context_pack.py  db.py  executor.py  extractors.py  gateway.py  llm_client.py  llm_client_test.py  metrics.py  metrics_report_test.py  output_visibility_test.py  patcher.py  ranking.py  reranker.py  response_handler.py  router.py  routing_contract.py  scanner.py  search.py  summaries.py  telemetry.py  usage_ledger.py  utils.py  watcher.py
codecontext/codecontext/benchmarks/datasets/: messy_real16.json  operational_debug.json
